<resources>
    <!--general-->
    <string name="app_name">DnD</string>
    <string name="txt_compendium">Compendium</string>
    <string name="txt_favorites">Favorites</string>
    <string name="txt_dices">Dices</string>
    <string name="txt_spells">Spells</string>
    <string name="txt_equipments">Equipments</string>
    <string name="txt_error_title">Something went wrong</string>
    <string name="txt_error_subtitle">try again later</string>

    <!--spell details-->
    <string name="txt_level">Level: %1$d</string>
    <string name="txt_detail_level">Level:</string>
    <string name="txt_detail_school">School:</string>
    <string name="txt_detail_casting_time">Casting Time:</string>
    <string name="txt_detail_range">Range:</string>
    <string name="txt_detail_components">Components:</string>
    <string name="txt_detail_duration">Duration:</string>
    <string name="txt_detail_classes">Classes:</string>
    <string name="txt_detail_higher_level">Higher Level:</string>

    <!--equipment details-->
    <string name="txt_detail_equipment_category">Equipment Category:</string>
    <string name="txt_detail_cost">Cost:</string>
    <string name="txt_detail_weight">Weight:</string>
    <string name="txt_detail_weapon_category">Weapon Category:</string>
    <string name="txt_detail_weapon_range">Weapon Range:</string>
    <string name="txt_detail_damage">Damage:</string>
    <string name="txt_detail_properties">Properties:</string>
    <string name="txt_detail_armor_category">Armor Category:</string>
    <string name="txt_detail_armor_class">Armor Class:</string>
    <string name="txt_detail_strength_minimum">Strength Minimum:</string>
    <string name="txt_detail_stealth_disadvantage">Stealth Disadvantage:</string>
    <string name="txt_content_cost">%1$d %2$s</string>
    <string name="txt_content_weight">%1$.2f pounds</string>
    <string name="txt_content_damage">%1$s - %2$s</string>
    <string name="txt_content_armor_class">%1$d %2$s</string>
    <string name="txt_menu_search">menu_search</string>
    <string name="txt_dexterity">+ Dexterity</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>

    <!--Dices-->
    <string name="txt_d4">D4</string>
    <string name="txt_d6">D6</string>
    <string name="txt_d8">D8</string>
    <string name="txt_d10">D10</string>
    <string name="txt_d12">D12</string>
    <string name="txt_d20">D20</string>
    <string name="txt_roll">Roll!</string>

</resources>