<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    tools:context=".presentation.feature.dices.DicesActivity">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/iv_dice"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@id/bt_roll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_d20" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_dice"
        app:layout_constraintEnd_toEndOf="@+id/iv_dice"
        app:layout_constraintStart_toStartOf="@+id/iv_dice"
        app:layout_constraintTop_toTopOf="@id/iv_dice"
        tools:text="20" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_roll"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_red"
        android:text="@string/txt_roll"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/cl_dice_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_dice" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_dice_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/content_bottom_navigation"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_d4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/base_red"
            android:text="@string/txt_d4"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/bt_d10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_d6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/base_red"
            android:text="@string/txt_d6"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/bt_d12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_d4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_d8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/base_red"
            android:text="@string/txt_d8"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/bt_d20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_d6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_d10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/base_red"
            android:text="@string/txt_d10"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bt_d4"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_d12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/base_red"
            android:text="@string/txt_d12"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bt_d6"
            app:layout_constraintTop_toBottomOf="@id/bt_d10" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_d20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/base_red"
            android:text="@string/txt_d20"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bt_d8"
            app:layout_constraintTop_toBottomOf="@id/bt_d12" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/content_bottom_navigation"
        layout="@layout/view_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>