<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.feature.compendium.spells.spellsList.SpellsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/base_red"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Heavy Plates" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_equipment_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_detail_equipment_category"
            android:textColor="@color/secondary_red"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_equipment_category_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tv_equipment_category"
            app:layout_constraintTop_toTopOf="@+id/tv_equipment_category"
            tools:text="Armor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_detail_cost"
            android:textColor="@color/secondary_red"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_equipment_category" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_cost_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tv_cost"
            app:layout_constraintTop_toTopOf="@+id/tv_cost"
            tools:text="25 po" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_detail_weight"
            android:textColor="@color/secondary_red"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cost" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_weight_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tv_weight"
            app:layout_constraintTop_toTopOf="@+id/tv_weight"
            tools:text="20 pounds" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_weight"
            tools:text="As an action, you can splash the contents of this vial onto a creature within 5 feet of you or throw the vial up to 20 feet, shattering it on impact. In either case, make a ranged attack against a creature or object, treating the acid as an improvised weapon."
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_weapon_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_weapon_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_detail_weapon_category"
                android:textColor="@color/secondary_red"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_weapon_category_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_weapon_category"
                app:layout_constraintTop_toTopOf="@+id/tv_weapon_category"
                tools:text="Martial Melee" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_weapon_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_detail_weapon_range"
                android:textColor="@color/secondary_red"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_weapon_category" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_weapon_range_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_weapon_range"
                app:layout_constraintTop_toTopOf="@+id/tv_weapon_range"
                tools:text="25ft" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_damage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_detail_damage"
                android:textColor="@color/secondary_red"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_weapon_range" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_damage_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_damage"
                app:layout_constraintTop_toTopOf="@+id/tv_damage"
                tools:text="2d6 Contundent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_properties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_detail_properties"
                android:textColor="@color/secondary_red"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_damage" />

            <ListView
                android:id="@+id/lv_properties_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_properties"
                tools:listitem="@layout/item_detail_basic" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_armor_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc"
            tools:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_armor_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_detail_armor_category"
                android:textColor="@color/secondary_red"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_armor_category_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_armor_category"
                app:layout_constraintTop_toTopOf="@+id/tv_armor_category"
                tools:text="Heavy" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_armor_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_detail_armor_class"
                android:textColor="@color/secondary_red"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_armor_category" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_armor_class_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_armor_class"
                app:layout_constraintTop_toTopOf="@+id/tv_armor_class"
                tools:text="15" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_str_minimum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_detail_strength_minimum"
                android:textColor="@color/secondary_red"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_armor_class" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_str_minimum_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_str_minimum"
                app:layout_constraintTop_toTopOf="@+id/tv_str_minimum"
                tools:text="14" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_stealth_disadvantage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_detail_stealth_disadvantage"
                android:textColor="@color/secondary_red"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_str_minimum" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_stealth_disadvantage_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_stealth_disadvantage"
                app:layout_constraintTop_toTopOf="@+id/tv_stealth_disadvantage"
                tools:text="Yes" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>